# mr-helpmate-ai

./: .gitignore  README.md  app.py  fastAPI.py  index.html  main.py  pyproject.toml  requirements.txt  submission.ipynb  test.py  test2.py  test3.py  testing.ipynb
chromadb_collection/: chroma.sqlite3
docs/: documentation.md
src/artifacts/: __init__.py
src/backend/: chunking_layer.py  embedding_layer.py  generation_layer.py  intent_moderation_check.py  pdf_retriever.py  reranker.py
src/constants/: __init__.py
src/database/: chromadb_cache.py  chromadb_connection.py  chromadb_vectorstore.py
src/logging/: __init__.py
